# aafp

./: .gitignore  AGENTS.md  ARCHITECTURE.md  COMPLIANCE_MATRIX.md  Cargo.toml  Dockerfile  FUZZING_REPORT.md  HANDSHAKE_VECTORS.md  IMPLEMENTATION_ISSUES.md  INTEROP-0001.md  NEGATIVE_CONFORMANCE.md  PERFORMANCE_CRITERIA.md  PERFORMANCE_VALIDATION.md  PHASE3_STATE.md  README.md  RELEASE_CRITERIA.md  SPEC_AMBIGUITIES.md  TEST_VECTORS.md  VERSION_NEGOTIATION_MATRIX.md  golden_traces_output.txt
crates/aafp-benchmark/: Cargo.toml
crates/aafp-benchmark/benches/: alloc_profile.rs  close_manager.rs  connection_lifecycle.rs  discovery.rs  framing.rs  handshake.rs  lock_contention.rs  mcp_transport.rs  messaging.rs  quic_tuning.rs  replay_cache.rs  runtime_tuning.rs  serialization.rs  session.rs  timing_analysis.rs
crates/aafp-benchmark/src/: alloc_tracker.rs  env_report.rs  harness.rs  lib.rs
crates/aafp-cli/: Cargo.toml
crates/aafp-cli/src/: main.rs
crates/aafp-cli/src/commands/: browse.rs  call.rs  connect.rs  discover.rs  health.rs  init.rs  metrics.rs  mod.rs  ocr.rs  peers.rs  quickstart.rs  read_pdf.rs  relay.rs  search.rs  send.rs  serve.rs  start.rs  status.rs  util.rs
crates/aafp-conformance/: Cargo.toml
crates/aafp-conformance/benches/: mldsa65_bench.rs
crates/aafp-conformance/src/: adversarial.rs  close_adversarial.rs  close_conformance.rs  close_differential.rs  close_property.rs  close_resources.rs  handshake_state_machine.rs  handshake_vectors.rs  lib.rs  mldsa_cross_matrix.rs  mldsa_cross_verify.rs  mldsa_differential.rs  mldsa_negative.rs  mldsa_property.rs  mldsa_rfc_verify.rs  negative.rs  pipeline_adversarial.rs  pipeline_order.rs  protocol_compliance.rs  replay_conformance.rs  replay_differential.rs  replay_stress.rs  rfc0002.rs  rfc0003.rs  rfc0004.rs  rfc0005.rs  test_vectors.rs  version_negotiation.rs
crates/aafp-core/: Cargo.toml
crates/aafp-core/src/: connection.rs  error.rs  handshake_state.rs  lib.rs  session.rs  swarm.rs  transport.rs
crates/aafp-crypto/: Cargo.toml
crates/aafp-crypto/benches/: handshake.rs
crates/aafp-crypto/src/: aead.rs  dsa.rs  handshake.rs  handshake_v1.rs  kdf.rs  kem.rs  lib.rs  replay_cache.rs  traits.rs
crates/aafp-crypto/tests/: crypto_comprehensive.rs
crates/aafp-discovery/: Cargo.toml
crates/aafp-discovery/src/: bootstrap.rs  capability_dht.rs  dht_router.rs  discovery_v1.rs  extension_index.rs  lib.rs  persistent_dht.rs  regional.rs  rpc_handler.rs
crates/aafp-discovery/src/semantic/: bridge_capabilities.rs  capability.rs  dht_query.rs  edge.rs  encoding.rs  evaluation.rs  extension_aware_dht.rs  extension_index.rs  graph.rs  index.rs  intent.rs  mod.rs  pipeline.rs  planner.rs  query.rs
crates/aafp-economics/: Cargo.toml
crates/aafp-economics/src/: account.rs  compensation.rs  lib.rs  pricing.rs  priority.rs  slashing.rs
crates/aafp-identity/: Cargo.toml
crates/aafp-identity/src/: agent_id.rs  agent_record.rs  ca_certificate.rs  identity_v1.rs  key_directory.rs  key_rotation.rs  keypair.rs  lib.rs  revocation.rs  revocation_distribution.rs  trust_manager.rs  ucan.rs  web_of_trust.rs
crates/aafp-identity/src/extensions/: attestation.rs  attestation_store.rs  cost.rs  geo.rs  heartbeat.rs  mod.rs  performance.rs  (+6 more)
crates/aafp-loadtest/: Cargo.toml
crates/aafp-loadtest/src/: config.rs  lib.rs  metrics.rs  runner.rs  topology.rs
crates/aafp-loadtest/tests/: load_test.rs
crates/aafp-messaging/: Cargo.toml
crates/aafp-messaging/src/: close_manager.rs  extensions.rs  framing.rs  keepalive.rs  lib.rs  pipeline.rs  pubsub.rs  pubsub_v1.rs  rpc.rs  rpc_v1.rs  stream.rs
crates/aafp-nat/: Cargo.toml
crates/aafp-nat/src/: auto_nat.rs  auto_nat_v1.rs  dcutr.rs  dcutr_v1.rs  lib.rs  relay.rs  relay_discovery.rs  relay_forwarding.rs  relay_v1.rs
crates/aafp-perception/: Cargo.toml
crates/aafp-perception/src/: lib.rs  schema.rs
crates/aafp-perception/tests/: live_providers.rs
crates/aafp-py/: .gitignore  Cargo.toml  INTEROP_RESULTS.md  pyproject.toml
crates/aafp-py/src/: agent.rs  lib.rs  simple.rs  transport.rs
crates/aafp-py/tests/: test_aafp_mcp.py  test_cross_sdk.py  test_mcp_sdk_interop.py  test_simple.py
crates/aafp-sdk/: Cargo.toml
crates/aafp-sdk/examples/: basic_agent.rs
crates/aafp-sdk/src/: builder.rs  client.rs  connection_pool.rs  cpu_affinity.rs  handshake_driver.rs  lib.rs  metrics.rs  prometheus.rs  protocol_frames.rs  runtime_config.rs  server.rs  simple.rs  transport_binding.rs
crates/aafp-sdk/tests/: simple_api.rs
crates/aafp-tests/: Cargo.toml  GO_INTEROP_RESULTS.md
crates/aafp-tests/examples/: dht_scale_test.rs  wan_test_client.rs  wan_test_server.rs
crates/aafp-tests/tests/: adversarial_handshake.rs  go_interop.rs  integration.rs  malformed_input.rs  multi_node_dht.rs  nat_performance.rs  nat_traversal.rs  resource_exhaustion.rs  stress_tests.rs  timing_analysis.rs  trust_scenarios.rs  wan_simulation.rs  wan_test.rs
crates/aafp-transport-a2a/: Cargo.toml  INTEROP_RESULTS.md
crates/aafp-transport-a2a/examples/: a2a_over_aafp.rs
crates/aafp-transport-a2a/src/: client.rs  error.rs  lib.rs  server.rs  types.rs
crates/aafp-transport-a2a/tests/: conformance.rs  integration.rs  spec_conformance.rs
crates/aafp-transport-mcp/: CONFORMANCE_RESULTS.md  Cargo.toml
crates/aafp-transport-mcp/examples/: mcp_client.rs  mcp_over_aafp.rs  mcp_server.rs  simple_transport.rs
crates/aafp-transport-mcp/src/: lib.rs
crates/aafp-transport-mcp/tests/: conformance.rs  integration.rs  official_conformance.rs
crates/aafp-transport-quic/: Cargo.toml
crates/aafp-transport-quic/src/: buffer_pool.rs  config.rs  congestion.rs  lib.rs  session_cache.rs  transport.rs
fuzz/: Cargo.toml
fuzz/artifacts/fuzz_cbor_decode/: crash-4e0a4343cb073fb62c7a4bcab8ff740c48051449  oom-3ec4b4ed70493bcf206de3dd40f138d20d498e27  oom-955993fe7a7ef3f94c45bc477b1e46cbffacf3e0
fuzz/fuzz_targets/: fuzz_agent_record_cbor.rs  fuzz_cbor_decode.rs  fuzz_dht_router.rs  fuzz_discovery_request.rs  fuzz_frame_decode.rs  fuzz_handshake_cbor.rs  fuzz_relay_request.rs  fuzz_rpc_decode.rs
(+129 files in other folders)
