[workspace]
resolver = "2"
members = [
    "crates/aafp-crypto",
    "crates/aafp-identity",
    "crates/aafp-core",
    "crates/aafp-transport-quic",
    "crates/aafp-discovery",
    "crates/aafp-nat",
    "crates/aafp-messaging",
    "crates/aafp-sdk",
    "crates/aafp-cli",
    "crates/aafp-benchmark",
    "crates/aafp-tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aafp/aafp"

[workspace.dependencies]
# Internal crates
aafp-crypto = { path = "crates/aafp-crypto" }
aafp-identity = { path = "crates/aafp-identity" }
aafp-core = { path = "crates/aafp-core" }
aafp-transport-quic = { path = "crates/aafp-transport-quic" }
aafp-discovery = { path = "crates/aafp-discovery" }
aafp-nat = { path = "crates/aafp-nat" }
aafp-messaging = { path = "crates/aafp-messaging" }
aafp-sdk = { path = "crates/aafp-sdk" }

# External dependencies
quinn = "0.11"
rustls = { version = "0.23", features = ["prefer-post-quantum", "aws-lc-rs"] }
aws-lc-rs = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ciborium = "0.2"
blake3 = "1"
sha2 = "0.10"
hkdf = "0.12"
chacha20poly1305 = "0.10"
aes-gcm = "0.10"
clap = { version = "4", features = ["derive"] }
criterion = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1"
anyhow = "1"
bytes = "1"
futures = "0.3"
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }
pqcrypto-mldsa = "0.1"
pqcrypto-traits = "0.3"
rand = "0.8"
rand_core = "0.6"
hex = "0.4"
x25519-dalek = { version = "2", features = ["static_secrets"] }
rcgen = "0.13"

[profile.release]
opt-level = 3
lto = "thin"
