[package]
name = "aafp-benchmark"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bench]]
name = "handshake"
path = "benches/handshake.rs"

[[bench]]
name = "discovery"
path = "benches/discovery.rs"

[[bench]]
name = "messaging"
path = "benches/messaging.rs"

[[bench]]
name = "close_manager"
path = "benches/close_manager.rs"

[[bench]]
name = "replay_cache"
path = "benches/replay_cache.rs"
harness = false

[[bench]]
name = "mcp_transport"
path = "benches/mcp_transport.rs"
harness = false

[dependencies]
aafp-crypto = { workspace = true }
aafp-identity = { workspace = true }
aafp-discovery = { workspace = true }
aafp-messaging = { workspace = true }
aafp-sdk = { workspace = true }
aafp-transport-quic = { workspace = true }
aafp-transport-mcp = { workspace = true }
criterion = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
tokio-util = { workspace = true }
rmcp = { version = "1.7", features = ["client", "server"] }
serde_json = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tokio = { workspace = true }
