[package]
name = "aafp-benchmark"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bench]]
name = "handshake"
path = "benches/handshake.rs"
harness = false

[[bench]]
name = "discovery"
path = "benches/discovery.rs"
harness = false

[[bench]]
name = "messaging"
path = "benches/messaging.rs"
harness = false

[[bench]]
name = "close_manager"
path = "benches/close_manager.rs"
harness = false

[[bench]]
name = "replay_cache"
path = "benches/replay_cache.rs"
harness = false

[[bench]]
name = "mcp_transport"
path = "benches/mcp_transport.rs"
harness = false

[[bench]]
name = "framing"
path = "benches/framing.rs"
harness = false

[[bench]]
name = "session"
path = "benches/session.rs"
harness = false

[[bench]]
name = "alloc_profile"
path = "benches/alloc_profile.rs"
harness = false

[[bench]]
name = "lock_contention"
path = "benches/lock_contention.rs"
harness = false

[[bench]]
name = "connection_lifecycle"
path = "benches/connection_lifecycle.rs"
harness = false

[[bench]]
name = "quic_tuning"
path = "benches/quic_tuning.rs"
harness = false

[[bench]]
name = "serialization"
path = "benches/serialization.rs"
harness = false

[dependencies]
aafp-core = { workspace = true }
aafp-crypto = { workspace = true }
aafp-identity = { workspace = true }
aafp-discovery = { workspace = true }
aafp-messaging = { workspace = true }
aafp-sdk = { workspace = true }
aafp-transport-quic = { workspace = true }
aafp-transport-mcp = { workspace = true }
aafp-cbor = { workspace = true }
criterion = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
tokio-util = { workspace = true }
rmcp = { version = "1.7", features = ["client", "server"] }
serde = { workspace = true }
serde_json = { workspace = true }
simd-json = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tokio = { workspace = true }
