[package]
name = "aafp-conformance"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aafp-cbor = { workspace = true }
aafp-core = { workspace = true }
aafp-crypto = { workspace = true }
aafp-identity = { workspace = true }
aafp-messaging = { workspace = true }
aafp-discovery = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true }

[lib]
name = "aafp_conformance"
path = "src/lib.rs"
