[package]
name = "aafp-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aafp-identity = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
