[package]
name = "aafp-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rustls = { workspace = true }
aws-lc-rs = { workspace = true }
pqcrypto-mldsa = { workspace = true }
pqcrypto-traits = { workspace = true }
aead = "0.5"
sha2 = { workspace = true }
hkdf = { workspace = true }
chacha20poly1305 = { workspace = true }
aes-gcm = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
x25519-dalek = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "handshake"
harness = false
