[package]
name = "aafp-discovery"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aafp-core = { workspace = true }
aafp-identity = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
