[package]
name = "aafp-discovery"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aafp-cbor = { workspace = true }
aafp-core = { workspace = true }
aafp-identity = { workspace = true }
aafp-messaging = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
aafp-crypto = { workspace = true }
tokio = { workspace = true }
