[package]
name = "aafp-economics"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aafp-cbor = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde"]
