[package]
name = "aafp-identity"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aafp-cbor = { workspace = true }
aafp-crypto = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ciborium = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
