[package]
name = "aafp-messaging"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aafp-cbor = { workspace = true }
aafp-core = { workspace = true }
aafp-crypto = { workspace = true }
aafp-identity = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ciborium = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
