[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "aafp-transport"
version = "0.1.0"
description = "AAFP post-quantum transport for Python MCP clients"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
]

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
pythonpath = ["python"]
asyncio_mode = "auto"
