[package]
name = "aafp-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aafp-core = { workspace = true }
aafp-cbor = { workspace = true }
aafp-crypto = { workspace = true }
aafp-identity = { workspace = true }
aafp-transport-quic = { workspace = true }
aafp-discovery = { workspace = true }
aafp-nat = { workspace = true }
aafp-messaging = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ciborium = { workspace = true }
bytes = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
core_affinity = { version = "0.8", optional = true }
libc = { version = "0.2", optional = true }

[features]
default = []
# Track L6: CPU core pinning for reduced p99 latency variance.
# Enable with: aafp-sdk = { features = ["cpu-affinity"] }
cpu-affinity = ["dep:core_affinity", "dep:libc"]

[dev-dependencies]
tokio = { workspace = true }
hex = { workspace = true }
anyhow = { workspace = true }

[[example]]
name = "basic_agent"
path = "examples/basic_agent.rs"

[[test]]
name = "simple_api"
path = "tests/simple_api.rs"
