[package]
name = "aafp-tests"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aafp-core = { workspace = true }
aafp-crypto = { workspace = true }
aafp-identity = { workspace = true }
aafp-discovery = { workspace = true }
aafp-messaging = { workspace = true }
aafp-nat = { workspace = true }
aafp-sdk = { workspace = true }
aafp-transport-quic = { workspace = true }
aafp-transport-a2a = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
aafp-cbor = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }

[[test]]
name = "integration"
path = "tests/integration.rs"

[[test]]
name = "go_interop"
path = "tests/go_interop.rs"

[[test]]
name = "wan_test"
path = "tests/wan_test.rs"

[[test]]
name = "trust_scenarios"
path = "tests/trust_scenarios.rs"

[[test]]
name = "adversarial_handshake"
path = "tests/adversarial_handshake.rs"

[[test]]
name = "resource_exhaustion"
path = "tests/resource_exhaustion.rs"

[[test]]
name = "wan_simulation"
path = "tests/wan_simulation.rs"

[[test]]
name = "stress_tests"
path = "tests/stress_tests.rs"

[[example]]
name = "wan_test_server"
path = "examples/wan_test_server.rs"

[[example]]
name = "wan_test_client"
path = "examples/wan_test_client.rs"
